<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".UserInfoFragment">


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/dim2"
        android:paddingTop="@dimen/dim6"
        android:paddingEnd="@dimen/dim2">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/userinfo_name_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/signup_name" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/dim2"
        android:paddingTop="@dimen/dim4"
        android:paddingEnd="@dimen/dim2">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/userinfo_pass_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/signup_pass" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/dim2"
        android:paddingTop="@dimen/dim4"
        android:paddingBottom="@dimen/dim4"
        android:paddingEnd="@dimen/dim2">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/userinfo_repass_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/signup_repass" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/dim2"
        android:paddingEnd="@dimen/dim2">
        <com.google.android.material.checkbox.MaterialCheckBox
            android:id="@+id/userinfo_is_job_owner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/font2"
            android:text="@string/signup_job"/>
    </com.google.android.material.textfield.TextInputLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/dim4"
        android:orientation="horizontal"
        android:gravity="center">
        <Button
            android:id="@+id/userinfo_done_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/done"
            android:textColor="@color/textColor"
            android:layout_marginEnd="@dimen/dim6" />
        <Button
            android:id="@+id/userinfo_cancel_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:textColor="@color/textColor"/>

    </LinearLayout>



</LinearLayout>