<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LoginFragment">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dim6"
        android:paddingStart="@dimen/dim2"
        android:paddingTop="@dimen/dim6"
        android:paddingEnd="@dimen/dim2">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/login_user_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login_user_name" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/dim2"
        android:paddingTop="@dimen/dim6"
        android:paddingEnd="@dimen/dim2">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/login_pass_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login_password"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/dim6"
        android:orientation="horizontal"
        android:gravity="center">
        <Button
            android:id="@+id/login_login_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textColor="@color/textColor"
            android:layout_marginEnd="@dimen/dim6" />
        <Button
            android:id="@+id/login_cancel_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:textColor="@color/textColor"/>
    </LinearLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/dim2"
        android:paddingTop="@dimen/dim6"
        android:paddingEnd="@dimen/dim2">
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/login_forget_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_forget"
            android:textColor="@color/textColor"
            android:textSize="@dimen/font2"
            android:paddingLeft="@dimen/dim2"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/dim2"
        android:paddingTop="@dimen/dim3"
        android:paddingEnd="@dimen/dim2">
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/login_signup_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/signup"
            android:textColor="@color/textColor"
            android:textSize="@dimen/font2"
            android:paddingLeft="@dimen/dim2"/>
    </com.google.android.material.textfield.TextInputLayout>

</LinearLayout>