<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SignupFragmment">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/dim2"
        android:paddingTop="@dimen/dim6"
        android:paddingEnd="@dimen/dim2">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/signup_email_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/signup_email" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/dim2"
        android:paddingTop="@dimen/dim4"
        android:paddingEnd="@dimen/dim2">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/signup_phone_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/signup_phone" />
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/dim6"
        android:orientation="horizontal"
        android:gravity="center">
        <Button
            android:id="@+id/signup_next_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/next"
            android:textColor="@color/textColor"
            android:layout_marginEnd="@dimen/dim6" />
        <Button
            android:id="@+id/signup_cancel_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:textColor="@color/textColor"/>

    </LinearLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/dim2"
        android:paddingTop="@dimen/dim6"
        android:paddingEnd="@dimen/dim2">
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/signup_avilability_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/signup_avilabilty"
            android:textColor="@color/textColor"
            android:textSize="@dimen/font2"
            android:paddingStart="@dimen/dim2"/>
    </com.google.android.material.textfield.TextInputLayout>

</LinearLayout>